syntax = 'proto3';

message SumRequest {
	int32 num1 = 1;
	int32 num2 = 2;
}

message SumResponse {
	int32 sum = 1;
}

message ChatRequest {
	string message = 1;
}

message ChatResponse {
	string reply = 1;
}

service DemoService {
	rpc Sum(SumRequest) returns (SumResponse);
	rpc Chat(stream ChatRequest) returns (stream ChatResponse);
}
